<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference android:key="enabled"
                      android:title="@string/enabled"
                      android:summary="@string/enabled_summary"
                      android:defaultValue="true" />
    <ListPreference android:key="difference_required"
                    android:title="@string/required_difference"
                    android:summary="@string/required_difference_summary"
                    android:defaultValue="2" /> <!-- todo test for this -->
    <EditTextPreference android:key="update_interval"
                        android:title="@string/update_interval_display_on"
                        android:summary="@string/update_interval_display_on_summary"
                        android:defaultValue="10"
                        android:inputType="number" />
    <EditTextPreference android:key="update_interval_display_off"
                        android:title="@string/update_interval_display_off"
                        android:summary="@string/update_interval_display_off_summary"
                        android:defaultValue="30"
                        android:inputType="number" />
    <ListPreference android:key="notification_type"
                    android:title="@string/notification_type"
                    android:summary="@string/notification_type_summary"
                    android:defaultValue="TOAST" /> <!-- todo test for this -->
    <CheckBoxPreference android:key="power_saver_disables"
                      android:title="@string/power_saver"
                      android:summary="@string/power_saver_description"
                      android:defaultValue="true"
                      android:enabled="true" />
    <Preference android:key="donate_button"
                android:title="@string/donate"
                android:summary="@string/donate_summary" />
</PreferenceScreen>